--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </section>
     
     <footer>
-            <p >We must embrace unionism now, than ever!</p>
+            <p >We must embrace honesty now, than ever!</p>
     </footer>
     <script src="./app.js"></script>
 </body>
